# Esp32-C-code

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/communication/: i2c_master_communication.c  i2c_slave_communication.c  in_ports_communication.c
main/config/: i2c_master_config.c  i2c_slave_config.c  in_ports_config.c
main/headers/: i2c_master_comm.h  i2c_master_config.h  i2c_slave_comm.h  i2c_slave_config.h  in_ports_comm.h  in_ports_config.h
main/headers/semaphore/: conflicts.h  ports_map.h  semaphore_control.h
main/semaphore/: ports_map.c  semaphore_control.c
