idf_component_register(SRCS "main.c"
                            "config/i2c_master_config.c"
                            "config/i2c_slave_config.c"
                            "config/in_ports_config.c"

                            "communication/i2c_master_communication.c"
                            "communication/i2c_slave_communication.c"
                            "communication/in_ports_communication.c"
                            
                            
                            
                            
                       INCLUDE_DIRS ".")
